fixed layout issue, added to banner, tried fixing scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,6 @@
-* {
-	font-family: 'Roboto', sans-serif;
+
+body {font-family: 'Roboto', sans-serif;
 	color: rgb(51,51,51);
-	margin: 0;
-	padding: 0;
-}
-body {
 	max-width: 100%;
 	width: 100%;
 	margin: 0;
@@ -12,6 +8,8 @@ body {
 	padding: 0;
 	background-color: #fff;	
 	background-color: rgb(222,222,222);
+	height: 100%;
+	overflow: auto;
 }
 .container {
 	height: 100%;
@@ -55,6 +53,10 @@ nav {
 	background-color: rgba(250,250,250,0.7);
 	box-shadow: 4px 4px 2px rgb(200,200,200);
 }
+nav div {
+	padding-top: 6px;
+	padding-right: 10px;
+}
 a {
 	color: #048CBA;
 	text-decoration: none;
@@ -80,6 +82,8 @@ h2 {
 	padding-bottom: 5px;
 }
 	h3{
+		margin: 0;
+		padding-left: 10px;
 		padding-top: 5px;
 		padding-bottom: 5px;
 	}
@@ -88,15 +92,6 @@ h2 {
 		padding-right: 10px;
 		padding-bottom: 5px;
 	}
-.col {
-	padding-left: 5px;
-	/*background-color: rgb(250,250,250);*/
-	margin-left: 0;
-	height: 100%;
-}
-.left {
-	float: left;
-}
 .right {
 	float: right;
 }
@@ -109,13 +104,12 @@ h2 {
 
 .sidemenu ul {
 	margin-left: 0;
-	padding-left: 15px;
+	padding-left: 5px;
 	margin-top: 15px;
 	list-style: none;
 }
 .sidemenu ul li {
 	padding-bottom: 3px;
-	/*border: 1px solid rgba(200,200,200,0.5);*/
 }
 footer {
 	z-index: 1;
@@ -160,12 +154,6 @@ footer {
 		background-color: rgba(250,250,250, 0.8);
 		box-shadow: 2px 1px 2px rgb(200,200,200);
 	}
-	.right {
-		clear: both;
-	}
-	.left {
-		clear: both;
-	}
 	h1 {
 		display: none;
 	}
@@ -187,14 +175,9 @@ footer {
 		margin: auto;
 	}
 .sidemenu ul {
-	margin: auto;
-
 	padding-left: 15px;
+	margin: auto;
 	list-style: none;
-}
-.sidemenu ul li {
-	padding-bottom: 3px;
-	/*border: 1px solid rgba(200,200,200,0.5);*/
 }
 }
 @media screen and (max-width: 640px) {
@@ -233,6 +216,10 @@ a:hover {
 	.sidemenu ul li {
 		border: none;
 		margin-bottom: 2px;
+	}
+	nav {
+		border-bottom: 1px solid rgb(222,222,222);
+		box-shadow: none;
 	}
 	.main-content {
 		background-color: inherit;
